password eyeToggle z-index fixed

--- a/src/auth/auth.module.css
+++ b/src/auth/auth.module.css
@@ -97,6 +97,7 @@
   background: transparent;
   width: 100%;
   padding: 0 15px;
+  z-index: 1;
   color: var(--primary-color);
   border-radius: 10px;
   border: 1px solid var(--mute-border);
@@ -152,7 +153,7 @@ input::placeholder {
 }
 
 .authPasswordToggle {
-  z-index: 70;
+  z-index: 999;
   top: 50%;
   transform: translateY(-50%);
   right: 15px;
@@ -162,6 +163,7 @@ input::placeholder {
   position: absolute;
   cursor: pointer;
   font-size: 18px;
+  pointer-events: auto;
 }
 
 .authError {
